[#8757] Remove duplicate agent metrics